filtros okay, faltando editar sugestão, deletar e layout

--- a/bs/bs/bs.csproj
+++ b/bs/bs/bs.csproj
@@ -13,6 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="ViewModels\CadastrarSugestao.xaml.cs">
+      <DependentUpon>CadastrarSugestao.xaml</DependentUpon>
+    </Compile>
     <Compile Update="ViewModels\ListarSugestoes.xaml.cs">
       <DependentUpon>ListarSugestoes.xaml</DependentUpon>
     </Compile>
